<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:background="@color/color1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/color13"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/edit_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_site"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/mail_address"
            android:textSize="20sp"
            android:textColor="@color/color1"/>
    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:id="@+id/ll_select_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/stay_area"
            android:textSize="20sp"
            android:textColor="@color/color7"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_show_address"
                android:layout_alignParentRight="true"
                android:layout_marginRight="50dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/click_stay_area"
                android:textSize="20sp"
                android:textColor="@color/color2"/>

            <ImageView
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_next"/>
        </RelativeLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/et_input_address"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="null"
        android:paddingLeft="15dp"
        android:maxLines="2"
        android:hint="@string/input_address_hint"/>

    <LinearLayout
        android:padding="10dp"
        android:id="@+id/ll_selet_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/person"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/mail_address"
            android:textSize="20sp"
            android:textColor="@color/color1"/>
    </LinearLayout>
    <EditText
        android:id="@+id/et_input_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="null"
        android:paddingLeft="15dp"
        android:hint="@string/input_name_hint"/>
    <EditText
        android:id="@+id/et_input_phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="null"
        android:inputType="phone"
        android:paddingLeft="15dp"
        android:hint="@string/input_phone_hint"/>

    <LinearLayout
        android:padding="10dp"
        android:id="@+id/ll_input_predict_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textColor="@color/color5"
            android:textStyle="bold"
            android:text="@string/text_predict_amount"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="null"
            android:gravity="center"
            android:textSize="14sp"
            android:hint="@string/text_predict_amount_hint"/>
    </LinearLayout>

    <EditText
        android:id="@+id/et_input_predict_amount"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="null"
        android:paddingLeft="15dp"
        android:hint="@string/input_amount_hint"/>
    <EditText
        android:id="@+id/et_input_average_weight"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="null"
        android:inputType="numberSigned"
        android:paddingLeft="15dp"
        android:hint="@string/input_weight_hint"/>



</LinearLayout>
